feat(order): add feature CancelOrder and unit tests [ORD-106]
